@@ -1,7 +1,8 @@
 Changelog file for Login component.
 
-Login 1.6.0
+Login 1.6.0/1
 ====================================
+- [#4886] Fix issue with variable variable in main login class when loading hooks
 - [#4487] Prevent usage of mb_ereg if not installed
 - [#3500] Fix issues with inline tplType params in Login snippets
 - [#4545] Fix issue with OnBeforeUserActivate event
